--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,11 +39,14 @@ dependencies {
     compile 'com.uphyca:stetho_realm:2.0.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.0.1'
+    compile 'com.google.dagger:dagger:2.4'
+    annotationProcessor "com.google.dagger:dagger-compiler:2.4"
     compile 'com.jakewharton:butterknife:8.6.0'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.google.android.gms:play-services:11.0.2'
     compile 'com.github.bumptech.glide:glide:3.5.2'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
+
 
 }
