IMPLEMENTATION: Add BaseActivity and Base Presenter. Add transition animation between PlacesActivity and DetailsActivity, improvements in DetailsActivity view. Refactor .

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.dawid.visitwroclove">
 
     <application
-        android:name=".MyApplication"
+        android:name=".application.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -23,6 +23,8 @@
         <activity android:name=".view.activity.MapActivity">
         </activity>
         <activity android:name=".view.activity.PlacesActivity">
+        </activity>
+        <activity android:name=".view.activity.DetailsActivity">
         </activity>
     </application>
 
