IMPLEMENTATION: Add events as another object in DB. Create DeatilsActivity and RecyclerAdapter for two types of data - eventDTO and objectDTO. Add Constants.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
         </activity>
         <activity android:name=".view.activity.DetailsActivity">
         </activity>
+        <activity android:name=".view.activity.EventsActivity">
+        </activity>
     </application>
 
 </manifest>
