--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light">
+        android:theme="@style/AppTheme">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBqWuDIVSRCq2YYT4a2gjG3fgLmOE0_Rw0"/>
@@ -24,8 +24,7 @@
         </activity>
         <activity android:name=".view.activity.PlacesActivity">
         </activity>
-        <activity android:name=".view.activity.DetailsActivity"
-            android:theme="@style/AppTheme">
+        <activity android:name=".view.activity.DetailsActivity">
         </activity>
         <activity android:name=".view.activity.EventsActivity">
         </activity>
