--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.dawid.visitwroclove">
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name=".application.MyApplication"
         android:allowBackup="true"
@@ -27,6 +27,8 @@
         <activity android:name=".view.activity.DetailsActivity">
         </activity>
         <activity android:name=".view.activity.EventsActivity">
+        </activity>
+        <activity android:name=".view.activity.WeatherActivity">
         </activity>
     </application>
 
