IMPLEMENTATION: Set activities responsible for displaying information about routes. Layouts and adapters added.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,10 @@
         </activity>
         <activity android:name=".view.activity.WeatherActivity">
         </activity>
+        <activity android:name=".view.activity.RoutesActivity">
+        </activity>
+        <activity android:name=".view.activity.RoutesListActivity">
+        </activity>
     </application>
 
 </manifest>
