--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.0.1'
     compile 'com.google.dagger:dagger:2.4'
+    compile 'com.akexorcist:googledirectionlibrary:1.0.5'
     annotationProcessor "com.google.dagger:dagger-compiler:2.4"
     compile 'com.jakewharton:butterknife:8.6.0'
     compile 'com.android.support:design:25.3.1'
