--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.azoft.carousellayoutmanager:carousel:1.2.1'
     compile 'com.google.android.gms:play-services:11.0.2'
     compile 'com.github.bumptech.glide:glide:3.5.2'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
