IMPROVEMENTS: Add icon for application, add icons in main panel. Add second webview for buses. Refactoring.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
         </activity>
         <activity android:name=".view.activity.EventsActivity">
         </activity>
-        <activity android:name=".view.activity.WeatherActivity">
+        <activity android:name=".view.activity.WebViewActivity">
         </activity>
         <activity android:name=".view.activity.RoutesActivity">
         </activity>
