--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile 'com.uphyca:stetho_realm:2.0.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.0.1'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
     compile 'com.google.dagger:dagger:2.4'
     compile 'com.akexorcist:googledirectionlibrary:1.0.5'
     annotationProcessor "com.google.dagger:dagger-compiler:2.4"
