--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.azoft.carousellayoutmanager:carousel:1.2.1'
     compile 'com.google.android.gms:play-services:11.0.2'
     compile 'com.github.bumptech.glide:glide:3.5.2'
